# Matcha

./: .gitignore  README.md  main.py  pyproject.toml
src/matcha/: cleanup.py  cli.py  config.py  continuer.py  db.py  faiss_index.py  fingerprint.py  indexer.py  matcher.py  mover.py  sync.py
tests/: README.md  conftest.py  generate_test_videos.py  test_continuer.py  test_indexer.py  test_matcher.py  test_mover.py
