[project]
name = "matcha"
version = "0.1.2"
description = "A video matching tool using perceptual hashing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imagehash>=4.3.2",
    "pillow>=12.2.0",
    "pyacoustid>=1.3.1",
    "typer>=0.24.1",
]

[project.scripts]
matcha = "matcha.cli:app"
