[project]
name = "matcha"
version = "1.5.4"
description = "A video matching tool using perceptual hashing."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "imagehash>=4.3.2",
    "pillow>=12.2.0",
    "pyacoustid>=1.3.1",
    "typer>=0.24.1",
]

[project.scripts]
matcha = "matcha.cli:app"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "opencv-python>=4.13.0.92",
    "pytest>=9.0.3",
    "tqdm>=4.67.3",
]
